--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         #thumbnails { width: 440px; float: left; }
         h1 { font-family: Verdana; color: #60b5cc; }
       </style>
-    <head>
+    </head>
     <body>
       <div id="app"></div>
 
